--- a/dia_2/frontend/index.html
+++ b/dia_2/frontend/index.html
@@ -7,6 +7,21 @@
 </head>
 <body>
     <p>Hola yo soy el frontend</p>
+    <form style="border: 1px solid black; margin: 10px; padding: 10px;">
+        <div style="padding: 10px 0px;">
+            <label for="nombre">Ingresa el nombre</label>
+            <input id="nombre"/>
+        </div>
+        <div style="padding: 10px 0px;">
+            <label for="precio">Ingresa el precio</label>
+            <input type="number" id="precio"/>
+        </div>
+        <div style="padding: 10px 0px;">
+            <label for="disponible">Ingresa la disponibilidad</label>
+            <input type="checkbox" id="disponible">
+        </div>
+            <button id="crearProductoBtn">Crear Producto</button>
+    </form>
 </body>
 <script src="./index.js"></script>
 </html>
